--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,12 +107,26 @@
         app:layout_constraintEnd_toEndOf="@+id/movieDurationTV"
         app:layout_constraintStart_toStartOf="@+id/movieReleaseDateTV" />
 
+    <VideoView
+        android:id="@+id/videoPlayer"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/movieReleaseDateTV" />
+
+
     <TextView
+        android:id="@+id/watchTrailerBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/button_bg"
         android:paddingHorizontal="16dp"
         android:paddingVertical="18dp"
@@ -122,6 +136,7 @@
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/movieDescriptionTV"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/videoPlayer" />
 
 </android.support.constraint.ConstraintLayout>
